--- a/src/components/InputPost/InputPost.module.css
+++ b/src/components/InputPost/InputPost.module.css
@@ -1,54 +1,52 @@
-.form{
-    background-color: #6233b9;
-    padding: 1rem;
-    width: 20rem;
-    margin: 1.5rem auto 2rem auto;
-    border-radius: 6px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+.form {
+  background-color: #6233b9;
+  padding: 1rem;
+  width: 20rem;
 }
 
-.formLabel{
-    display:block;
-    margin-bottom: 0.05rem;
-    color: #eadbfb;
-    font-weight: bold;
-    padding-bottom: 0.3rem;
+.formLabel {
+  display: block;
+  margin-bottom: 0.05rem;
+  color: #eadbfb;
+  font-weight: bold;
+  padding-bottom: 0.3rem;
 }
 
-.form input, .form textarea{
-    display: block;
-    width: 100%;
-    padding: 0.5rem;
-    border-radius: 6px;
-    border: none;
-    background-color: #c4a9e4;
-    color: #28262c;
-    margin-bottom: 0.5rem;
+.form input,
+.form textarea {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 6px;
+  border: none;
+  background-color: #c4a9e4;
+  color: #28262c;
+  margin-bottom: 0.5rem;
 }
 
-.actions{
-    display: flex;
-    justify-content: flex-end;
-    gap: 0.5rem;
+.actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.5rem;
 }
 
-.actions button{
-    cursor: pointer;
-    padding: 0.5rem 1.5rem;
-    border: none;
-    border-radius: 6px;
-    background-color: #34036c;
-    color: #e5d5f7
+.actions button {
+  cursor: pointer;
+  padding: 0.5rem 1.5rem;
+  border: none;
+  border-radius: 6px;
+  background-color: #34036c;
+  color: #e5d5f7;
 }
 
-.actions button:hover{
-    background-color: #23014a;
+.actions button:hover {
+  background-color: #23014a;
 }
 
-.actions button[type="button"]{
-    background-color: transparent;
+.actions button[type="button"] {
+  background-color: transparent;
 }
 
-.actions button[type="button"]:hover{
-    color: #d1bee6;
+.actions button[type="button"]:hover {
+  color: #d1bee6;
 }
